# workbench

./: .gitignore  AGENTS.md  README.md  STACK.md  justfile  pyproject.toml
.github/workflows/: ci.yml
agents/claude/: desktop-preferences.json  permissions.json  plugins.json  statusline.sh
agents/codex/: default.rules  hooks.json  plugins.json  statusline.toml
agents/pi/: mcp.json  models.json  permission-policy.json  presets.json  settings.json
agents/prompts/: README.md  system-prompt-advisor.md
agents/shared/: ignore-patterns  mcp-servers.json  rules.md
agents/subagents/: code-reviewer.md  debugger.md  error-detective.md  performance-engineer.md  security-auditor.md  shellcheck-reviewer.md  test-writer.md
docs/: experiments.md  managed-surfaces.md  pi-build-philosophy.md  pi-capabilities.md  review-prompts.md
docs/decisions/: tombstones.md
docs/security/: adversarial-audit-prompt.md
health/: README.md  baseline.example.json
health/patterns/: slop-phrases.txt
health/reviews/: abstractions.md  bug-hunt.md  coupling.md  docs-drift.md  duplication.md  god-functions.md  migration-safety.md  observability-coverage.md  primitive-obsession.md  python-contracts.md  rust-contracts.md  security.md  sql-contracts.md  sqlx-cache.md  structural.md  voice.md
playbook/: engineering-philosophy.md  tools-to-evaluate.md
playbook/knowledge/: README.md  agent-output.md  ai-coding-frameworks.md  ai-tools.md  browser-tooling.md  customer-discovery.md  engineering-gates.md  engineering-laws.md  project-memory.md  token-efficiency.md
playbook/stacks/: README.md  infrastructure.md  security.md  services.md
scripts/: workbench.py
tests/: pi-activity-title.test.ts  pi-footer.test.ts  pi-google-readonly.test.ts  pi-permission-policy.test.ts  pi-presets.test.ts  pi-strava-readonly.test.ts  pi-worker.test.ts  test_workbench.py
(+118 files in other folders)
